--- a/声科/zh_style.css
+++ b/声科/zh_style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(  );
+    background-image: url(../image/周豪主页背景图片.jpg);
     background-repeat: no-repeat;
     /* 溢出隐藏 */
     overflow: hidden;
